[package]
name = "xplane-scenery-check"
version = "0.1.0"
edition = "2021"
repository = "https://code.geber.io/romangeber/xplane-scenery-check"
license = "MIT"
authors = ["Roman Geber <dlz9zxdkjptu@romangeber.com>"]
rust-version = "1.71.0"
keywords = ["xplane", "flightsim"]
categories = ["aerospace::simulation", "game-development"]
publish = false
description = "A simple command line tool to scan you X-Plane scenery for errors."
default-run = "xplane-scenery-check"

[[bin]]
name = "xplane-scenery-check"
path = "./src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 128
rpath = false

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
glob = { version = "0.3.1"}
rayon = { version = "1.8.0" }
